# ai-agents-for-beginners

./: pyproject.toml
03-agentic-design-patterns/codes/: main_agent_framework.py  main_semantic_kernel.py
04-tool-use/codes/: main_agent_framework.py  main_semantic_kernel.py
